<resources>
    <string name="app_name">Boozy</string>
    <string name="bienvenue_sur_boozy">Bienvenue sur Boozy</string>
    <string name="background">Background</string>
    <string name="connexion">Connexion</string>
    <string name="inscription">Inscription</string>
    <string name="suivi_commande">Suivi commande</string>
    <string name="historique">Historique</string>
    <string name="profil">Profil</string>
    <string name="banner">banner</string>
    <string name="magasins_dispo">Magasins disponibles</string>
    <string name="ic_notif">ic_notif</string>
    <string name="ic_clock">ic_clock</string>
    <string name="ic_profil">ic_profil</string>
    <string name="recherche">Recherche</string>
    <string name="retour">Retour</string>
    <string name="commande_en_cours">Commande en cours</string>
    <string name="livrer">Marquer comme livrée</string>
    <string name="demarrer">Démarrer la course</string>
    <string name="commande_attente">Commandes en attente d’acceptation</string>
    <string name="boozy">BOOZY</string>
    <string name="email_domain_com">email@domain.com</string>
    <string name="mdp">***************</string>
    <string name="se_connecter">Se connecter</string>
    <string name="mdp_oublie">Mot de passe oublié ?</string>
    <string name="modifier_le_profil">Modifier le profil</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="numero_civique">Numéro civique</string>
    <string name="rue">Rue</string>
    <string name="code_postal">Code postal</string>
    <string name="ville">Ville</string>
    <string name="courriel">Courriel</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="carte_bancaire">Carte bancaire</string>
    <string name="enregistrer_les_modifications">Enregistrer les modifications</string>
    <string name="telephone">Téléphone</string>
    <string name="paiement">Paiement</string>
    <string name="adresse">Adresse</string>
    <string name="panier">Panier</string>
    <string name="sous_total">Sous-total</string>
    <string name="frais_de_livraison">Frais de livraison</string>
    <string name="taxes">Taxes</string>
    <string name="total">Total</string>
    <string name="placer_la_commande">Placer la commande</string>
    <string name="paiement_securis">Paiement sécurisé</string>
    <string name="ouvrir_itineraire">Ouvrir l’itinéraire</string>
    <string name="google_maps">Google Maps</string>
    <string name="waze">Waze</string>
    <string name="politique">En cliquant sur Continuer, vous acceptez nos Conditions générales et notre Politique de confidentialité.</string>
    <string name="gratuit">Gratuit</string>
    <string name="carte_stripe">Carte enregistrée</string>
    <string name="avatar">Avatar</string>
    <string name="se_deconnecter">Se déconnecter</string>
    <string name="ageMajeur">Je certifie avoir 18 ans ou plus.</string>
    <string name="creationCompte">Créer mon compte</string>
    <string name="s_inscrire">S’inscrire</string>
    <string name="permis">Numéro de permis de conduire</string>
    <string name="quel_est_votre_profil">Quel est votre profil ?</string>
    <string name="livreur">Livreur</string>
    <string name="client">Client</string>
    <string name="banniere">Bannière</string>
    <string name="splash_gif">Splash GIF</string>
    <string name="date">Date</string>
    <string name="total_paye">Total payé</string>
    <string name="en_cours_de_traitement">En cours de traitement</string>
    <string name="en_route">En route</string>
    <string name="livree">Livrée</string>
    <string name="appartement">Appartement</string>
    <string name="ajouter_au_panier">Ajouter au panier</string>
    <string name="num_de_plaque">Numéro de plaque</string>
    <string name="livre">Marquer comme livrée</string>
</resources>