<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/registerDeliveryLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:text="@string/boozy"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Formulaire -->
    <TextView
        android:id="@+id/textSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/s_inscrire"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTitle" />

    <LinearLayout
        android:id="@+id/formFields"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:divider="?android:attr/dividerHorizontal"
        android:showDividers="middle"
        android:dividerPadding="12dp"
        app:layout_constraintTop_toBottomOf="@id/textSubtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/nom"
            android:background="@drawable/edit_text_bg"
            android:padding="12dp"/>

        <EditText
            android:id="@+id/inputFirstName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/prenom"
            android:background="@drawable/edit_text_bg"
            android:padding="12dp"
            android:layout_marginTop="12dp" />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email_domain_com"
            android:inputType="textEmailAddress"
            android:background="@drawable/edit_text_bg"
            android:padding="12dp"
            android:layout_marginTop="12dp"/>

        <EditText
            android:id="@+id/inputPhone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/telephone"
            android:inputType="phone"
            android:background="@drawable/edit_text_bg"
            android:padding="12dp"
            android:layout_marginTop="12dp" />

        <EditText
            android:id="@+id/inputDrivingLicense"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/num_de_plaque"
            android:background="@drawable/edit_text_bg"
            android:padding="12dp"
            android:layout_marginTop="12dp" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/mdp"
            android:inputType="textPassword"
            android:background="@drawable/edit_text_bg"
            android:padding="12dp"
            android:layout_marginTop="12dp" />
    </LinearLayout>

    <!-- Bouton -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonCreateAccountDelivery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/creationCompte"
        android:textColor="#FFFFFF"
        android:background="@drawable/button_square"
        app:layout_constraintTop_toBottomOf="@id/formFields"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Texte en bas -->
    <TextView
        android:id="@+id/textTerms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/politique"
        android:textColor="#999999"
        android:textSize="12sp"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@id/buttonCreateAccountDelivery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
